@startuml Architecture

skinparam linetype ortho
skinparam backgroundColor #3F00FF

' Package Styling
skinparam package {
    BackgroundColor #FFD300
    BorderColor #FF007F
    FontColor Black
}

' Class Styling
skinparam class {
    BackgroundColor #FF007F
    BorderColor #3F00FF
    FontColor Black
    ArrowColor #3F00FF
    ArrowThickness 2
}

' Arrow Styling
skinparam Arrow {
    Color #3F00FF
    Thickness 2
}

' Packages and Classes
package model {
    class Game
}

package agent {
    class Agent
    class HumanAgent extends Agent
    class RandomAgent extends Agent
    class MatchboxAgent extends Agent
    Agent -[#FF007F]--> Game
}

package controller {
    class Controller
    class GamePublisher
    class GameSubscriber

    GamePublisher --> GameSubscriber
    Controller --> GamePublisher
    GameSubscriber -[#FF007F]--> Game
    Controller -[#FF007F]--> Game
    Controller -[#FF007F]--> Agent 
}

package view {
    class View
    class ConsoleView extends View
    View -[#FF007F]--|> GameSubscriber
}

package statistics {
    class StatisticsTracker
    class WinTracker extends StatisticsTracker
    class WinRateTracker extends WinTracker
    class WinStreakTracker extends WinTracker
    class BatchWinTracker extends StatisticsTracker
    class RollingWinTracker extends StatisticsTracker
    class WinRateRollingTracker extends RollingWinTracker
    class GameLengthTracker extends StatisticsTracker
    StatisticsTracker -[#FF007F]-|> GameSubscriber
}

@enduml